# pytorch-cuda-check

./: .pre-commit-config.yaml  README.md  gpu_check.py  gpu_notebook.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cuda.py
